myVPC.json
{
    "AWSTemplateFormatVersion" : "2010-09-09",

    "Parameters": {

        
        "PublicAZ": {
            "Description": "PublicAZ",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        },

        
        "PrivateAZ": {
            "Description": "PrivateAZ",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        }
        
        
        
        
        
        
    },

    "Resources": {

        
        "myVPC": {
          "Type": "AWS::EC2::VPC",
          "Properties": {
            "CidrBlock": "192.168.0.0/16"
          }
        },

         
        "publicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
              "AvailabilityZone": { "Ref": "PublicAZ" },
              "VpcId": { "Ref": "myVPC" },
              "CidrBlock": "192.168.1.0/24"
            }
          },
  
          
          "publicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
              "VpcId": { "Ref": "myVPC" }
              }
            },
          
  
          
          "routeTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
              "SubnetId": { "Ref": "publicSubnet" },
              "RouteTableId":  { "Ref": "publicRouteTable" }
            }
          },

          "myIGW": {
            "Type": "AWS::EC2::InternetGateway"
          },

          "AttachGateway": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
              "VpcId": { "Ref": "myVPC" },
              "InternetGatewayId": { "Ref": "myIGW" }
            }
          },

          
          "publicRouting": {
            "Type": "AWS::EC2::Route",
            "Properties": {
              "RouteTableId": { "Ref": "publicRouteTable" },
              "DestinationCidrBlock": "0.0.0.0/0",
              "GatewayId": { "Ref": "myIGW" }
              
            }
          },

          
          "privateSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
              "AvailabilityZone": { "Ref": "PrivateAZ" },
              "VpcId": { "Ref": "myVPC" },
              "CidrBlock": "192.168.2.0/24"
            }
          },

          
          "privateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
              "VpcId": { "Ref": "myVPC" }
             
            }
          },

          
          "privateRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
              "SubnetId": { "Ref": "privateSubnet" },
              "RouteTableId": { "Ref": "privateRouteTable" }
              
            }
          },

          "NATGatewayEIP" : {
            "Type" : "AWS::EC2::EIP"
         },
          
         "myNATGateway" : {
            "Type" : "AWS::EC2::NatGateway",
            "Properties" : {
               "AllocationId" : { 
                   "Fn::GetAtt" : ["NATGatewayEIP", "AllocationId"]},
                   "SubnetId" : { "Ref" : "publicSubnet" }
              }
         },

         
         "NatGatewayRoute": {
            "DependsOn": [ "myNATGateway" ],
           "Type": "AWS::EC2::Route",
           "Properties": {
             "RouteTableId": { "Ref": "privateRouteTable" },
              "DestinationCidrBlock": "0.0.0.0/0",
             "NatGatewayId": { "Ref": "myNATGateway" }
             
           }
         }
    },

    "Outputs": {

        
        "myVPCID" : {
          "Value" : { "Ref": "myVPC" }
        },

        "publicSubnet" : {
            "Value" : { "Ref": "publicSubnet" }
          },

          "privateSubnet" : {
            "Value" : { "Ref": "privateSubnet" }
          },

          "NatGatewayRoute" : {
            "Value" : { "Ref": "NatGatewayRoute" }
          }
    
    }
}
